-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 10
-
Component/s: security-libs
-
b35
-
Not verified
GSSLibStub.c
In the function Java_sun_security_jgss_wrapper_GSSLibStub_getMic()
there are two lines with assignment:
contextHdl = (gss_ctx_id_t) jlong_to_ptr(pContext);
The second one seems redundant.
In the function Java_sun_security_jgss_wrapper_GSSLibStub_getMic()
there are two lines with assignment:
contextHdl = (gss_ctx_id_t) jlong_to_ptr(pContext);
The second one seems redundant.