8187497: Redundant variable assignment in Java_sun_security_jgss_wrapper_GSSLibStub_getMic

Reviewed-by: wetmore